ecmascript/parser/tests/test262-error-references/fail/8ba15f5246ca756c.js.stderr
error: Expected }, got <eof>
 --> $DIR/tests/test262-parser/fail/8ba15f5246ca756c.js:1:9
  |
1 | class A {
  |         ^

